--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
-                <version>0.40.0</version>
+                <version>0.41.0-SNAPSHOT</version>
                 <configuration>
                     <outputDirectory>target/docker-build</outputDirectory>
                     <useColor>false</useColor>
